testsuite/tests/properties/invalid_enum_dflt_val/not_id.lkt
import common

@with_default(0) enum MyEnum {
    case a, b, c
}
